tests/pld-test-output/tests-Init-06_2_testAffChar/pld-compile.txt
Error in input.c.
Error no viable alternative at input 'char a = 'A'\n\treturn'. On position 4:1
   "	return a;"
     ^

1 error generated.

return code: 1
